--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,9 +5,9 @@ AM_CFLAGS = $(SDL_CFLAGS)
 LIBS = $(SDL_LIBS)
 
 reevengi_SOURCES = main.c file.c state.c re1_ps1_demo.c re2_pc_demo.c \
-	depack_adt.c parameters.c
+	depack_adt.c parameters.c depack_vlc.c
 
 reevengi_headers = file.h state.h re1_ps1_demo.h re2_pc_demo.h depack_adt.h \
-	parameters.h
+	parameters.h depack_vlc.h
 
 EXTRA_DIST = $(reevengi_headers)
