--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,9 +5,10 @@ AM_CFLAGS = $(SDL_CFLAGS)
 LIBS = $(SDL_LIBS)
 
 reevengi_SOURCES = main.c file.c state.c re1_ps1_demo.c re2_pc_demo.c \
-	depack_adt.c parameters.c depack_vlc.c depack_mdec.c idctfst.c
+	depack_adt.c parameters.c depack_vlc.c depack_mdec.c idctfst.c \
+	re2_ps1_demo.c
 
 reevengi_headers = file.h state.h re1_ps1_demo.h re2_pc_demo.h depack_adt.h \
-	parameters.h depack_vlc.h depack_mdec.h idctfst.h
+	parameters.h depack_vlc.h depack_mdec.h idctfst.h re2_ps1_demo.h
 
 EXTRA_DIST = $(reevengi_headers)
