Add check for SDL_image

--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,12 @@ fi
 # SDL
 AM_PATH_SDL( 1.2.0 , :, AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
 
+# SDL_image
+AC_CHECK_LIB(SDL_image, IMG_isJPG, have_sdlimage_lib=yes, have_sdlimage_lib=no)
+if test "x$have_sdlimage_lib" = "xyes"; then
+	SDL_LIBS="$SDL_LIBS -lSDL_image"
+fi
+
 # Outputs
 AC_CONFIG_FILES([
 Makefile
