--- a/configure.ac
+++ b/configure.ac
@@ -62,7 +62,7 @@ if test "x$have_sdlimage_h" = "xyes" -a "x$have_sdlimage_lib" = "xyes"; then
 	SDLIMAGE_LIBS="-lSDL_image $SYS_SDLIMAGE_ADDLIBS $ZLIB_LIBS"
 	AC_DEFINE(ENABLE_SDLIMAGE, 1, [Define if you have SDL_image])
 else
-	AC_MSG_ERROR([*** SDL_image not found!])
+	AC_MSG_WARN([*** SDL_image not found!])
 fi
 CFLAGS=$TMP_CFLAGS
 CPPFLAGS=$TMP_CPPFLAGS
@@ -80,11 +80,44 @@ else
 fi
 LIBS=$TMP_LIBS
 
+# FFmpeg libavcodec
+
+AC_CHECK_HEADER(ffmpeg/avcodec.h, have_avcodec_h=yes, have_avcodec_h=no)
+AC_CHECK_LIB(avcodec, avcodec_find_encoder_by_name, have_avcodec_lib=yes)
+have_avcodec="no"
+if test "x$have_avcodec_h" = "xyes" -a "x$have_avcodec_lib" = "xyes"; then
+	AVCODEC_LIBS="-lavcodec"
+	have_avcodec="yes"
+else
+	AC_MSG_WARN([*** FFmpeg avcodec not found!])
+fi
+
+# FFmpeg libavformat
+
+AC_CHECK_HEADER(ffmpeg/avformat.h, have_avformat_h=yes, have_avformat_h=no)
+AC_CHECK_LIB(avformat, av_alloc_format_context, have_avformat_lib=yes)
+have_avformat="no"
+if test "x$have_avformat_h" = "xyes" -a "x$have_avformat_lib" = "xyes"; then
+	AVFORMAT_LIBS="-lavformat"
+	have_avformat="yes"
+else
+	AC_MSG_WARN([*** FFmpeg avformat not found!])
+fi
+
+# FFmpeg
+
+FFMPEG_LIBS=
+if test "x$have_avformat" = "xyes" -a "x$have_avcodec" = "xyes"; then
+	AC_DEFINE(ENABLE_FFMPEG, 1, [Define if you have FFmpeg])
+	FFMPEG_LIBS="$AVFORMAT_LIBS $AVCODEC_LIBS"
+fi
+
 # Outputs
 AC_SUBST(ZLIB_CFLAGS)
 AC_SUBST(ZLIB_LIBS)
 AC_SUBST(SDLIMAGE_LIBS)
 AC_SUBST(PHYSFS_LIBS)
+AC_SUBST(FFMPEG_LIBS)
 
 AC_CONFIG_FILES([
 Makefile
