Ajout re3, pc, jeu

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,13 +7,13 @@ LIBS = $(SDL_LIBS) $(SDLIMAGE_LIBS) $(PHYSFS_LIBS) $(ZLIB_LIBS) $(FFMPEG_LIBS)
 reevengi_SOURCES = main.c state.c re1_ps1.c re2_pc_demo.c re2_pc_game.c \
 	depack_adt.c parameters.c depack_vlc.c depack_mdec.c idctfst.c \
 	re2_ps1.c re3_ps1_game.c depack_pak.c re1_pc_game.c \
-	background_bss.c background_tim.c re3_pc_demo.c\
+	background_bss.c background_tim.c re3_pc.c \
 	filesystem.c physfsrwops.c view_background.c view_movie.c
 
 reevengi_headers = state.h re1_ps1.h re2_pc_demo.h depack_adt.h \
 	parameters.h depack_vlc.h depack_mdec.h idctfst.h re2_ps1.h \
 	re3_ps1_game.h depack_pak.h re1_pc_game.h background_bss.h \
-	background_tim.h re3_pc_demo.h filesystem.h re2_pc_game.h \
+	background_tim.h re3_pc.h filesystem.h re2_pc_game.h \
 	physfsrwops.h view_background.h view_movie.h
 
 EXTRA_DIST = $(reevengi_headers)
