--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,7 +13,7 @@ reevengi_SOURCES = main.c state.c re1_ps1.c re2_pc_demo.c re2_pc_game.c \
 	filesystem.c physfsrwops.c view_background.c view_movie.c \
 	dyngl.c video.c video_opengl.c dirty_rects.c video_surface.c \
 	video_surface_opengl.c model_emd.c model_emd3.c model_emd2.c \
-	log.c render.c render_opengl.c \
+	log.c render.c render_opengl.c render_texture_opengl.c \
 	render_background.c render_background_opengl.c \
 	matrix.c dither.c render_texture.c draw_simple.c draw_sbuffer.c
 
@@ -24,7 +24,7 @@ reevengi_headers = state.h re1_ps1.h re2_pc_demo.h depack_adt.h \
 	physfsrwops.h view_background.h view_movie.h \
 	dyngl.h video.h dirty_rects.h video_surface.h video_surface_opengl.h \
 	model_emd.h model_emd3.h model_emd2.h log.h \
-	render.h \
+	render.h render_texture_opengl.h \
 	render_background.h render_background_opengl.h \
 	matrix.h draw.h model.h dither.h render_texture.h draw_simple.h draw_sbuffer.h
 
