Separate file for room description

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,27 +6,39 @@ AM_CXXFLAGS = $(SDL_CFLAGS) $(AVCODEC_CFLAGS) $(AVFORMAT_CFLAGS) $(PHYSFS_CFLAGS
 LIBS = $(SDL_LIBS) $(SDLIMAGE_LIBS) $(PHYSFS_LIBS) $(ZLIB_LIBS) $(AVCODEC_LIBS) \
 	$(AVFORMAT_LIBS)
 
-reevengi_SOURCES = main.c state.c re1_ps1.c re2_pc_demo.c re2_pc_game.c \
-	depack_adt.c parameters.c depack_vlc.c depack_mdec.c idctfst.c \
-	re2_ps1.c re3_ps1_game.c depack_pak.c re1_pc_game.c \
-	background_bss.c background_tim.c re3_pc.c \
-	filesystem.c physfsrwops.c view_background.c view_movie.c \
-	dyngl.c video.c video_opengl.c dirty_rects.c video_surface.c \
-	video_surface_opengl.c model_emd.c model_emd3.c model_emd2.c \
-	log.c render.c render_opengl.c render_texture_opengl.c \
+reevengi_SOURCES = background_bss.c background_tim.c \
+	depack_adt.c depack_mdec.c depack_pak.c depack_vlc.c \
+	dirty_rects.c dither.c draw_sbuffer.c draw_simple.c dyngl.c \
+	filesystem.c idctfst.c log.c main.c matrix.c \
+	model_emd.c model_emd2.c model_emd3.c \
+	parameters.c physfsrwops.c \
+	re1_pc_game.c re1_ps1.c \
+	re2_pc_demo.c re2_pc_game.c re2_ps1.c \
+	re3_pc.c re3_ps1_game.c \
 	render_background.c render_background_opengl.c \
-	matrix.c dither.c render_texture.c draw_simple.c draw_sbuffer.c room.c
+	render.c render_opengl.c \
+	render_texture.c render_texture_opengl.c \
+	room.c room_rdt.c room_rdt2.c \
+	state.c video.c video_opengl.c \
+	video_surface.c video_surface_opengl.c \
+	view_background.c view_movie.c
 
-reevengi_headers = state.h re1_ps1.h re2_pc_demo.h depack_adt.h \
-	parameters.h depack_vlc.h depack_mdec.h idctfst.h re2_ps1.h \
-	re3_ps1_game.h depack_pak.h re1_pc_game.h background_bss.h \
-	background_tim.h re3_pc.h filesystem.h re2_pc_game.h \
-	physfsrwops.h view_background.h view_movie.h \
-	dyngl.h video.h dirty_rects.h video_surface.h video_surface_opengl.h \
-	model_emd.h model_emd3.h model_emd2.h log.h \
-	render.h render_texture_opengl.h \
+reevengi_headers = background_bss.h background_tim.h \
+	depack_adt.h depack_mdec.h depack_pak.h depack_vlc.h \
+	dirty_rects.h dither.h draw.h draw_sbuffer.h draw_simple.h dyngl.h \
+	filesystem.h idctfst.h log.h matrix.h \
+	model.h model_emd.h model_emd2.h model_emd3.h \
+	parameters.h physfsrwops.h \
+	re1_pc_game.h re1_ps1.h \
+	re2_pc_demo.h re2_pc_game.h re2_ps1.h \
+	re3_pc.h re3_ps1_game.h \
 	render_background.h render_background_opengl.h \
-	matrix.h draw.h model.h dither.h render_texture.h draw_simple.h draw_sbuffer.h room.h
+	render.h \
+	render_texture.h render_texture_opengl.h \
+	room.h room_rdt.h room_rdt2.h \
+	state.h video.h \
+	video_surface.h video_surface_opengl.h \
+	view_background.h view_movie.h
 
 reevengi_generated = dyngl_gl.c dyngl_gl.h dyngl_glext.c dyngl_glext.h
 
