--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,9 @@ reevengi_SOURCES = background_bss.c background_tim.c \
 	render_background.c render_background_opengl.c \
 	render.c render_opengl.c \
 	render_texture.c render_texture_opengl.c \
-	room.c room_rdt.c room_rdt2.c room_rdt2_items.c room_rdt3_script.c \
+	room.c room_rdt.c room_rdt_script.c \
+	room_rdt2.c room_rdt2_items.c \
+	room_rdt3_script.c \
 	state.c video.c video_opengl.c \
 	video_surface.c video_surface_opengl.c \
 	view_background.c view_movie.c
@@ -35,7 +37,9 @@ reevengi_headers = background_bss.h background_tim.h \
 	render_background.h render_background_opengl.h \
 	render.h \
 	render_texture.h render_texture_opengl.h \
-	room.h room_rdt.h room_rdt2.h room_rdt2_items.h room_rdt3_script.h \
+	room.h room_rdt.h room_rdt_script.h \
+	room_rdt2.h room_rdt2_items.h \
+	room_rdt3_script.h \
 	state.h video.h \
 	video_surface.h video_surface_opengl.h \
 	view_background.h view_movie.h
