Update vs2005 project, fix warnings

--- a/vs2005/reevengi.vcproj
+++ b/vs2005/reevengi.vcproj
@@ -207,6 +207,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\depack_sld.c"
+				>
+			</File>
+			<File
 				RelativePath="..\src\depack_vlc.c"
 				>
 			</File>
@@ -418,6 +422,10 @@
 			</File>
 			<File
 				RelativePath="..\src\depack_pak.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\depack_sld.h"
 				>
 			</File>
 			<File
