--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,7 @@ reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	re2_pc_demo.c re2_pc_game.c re2_ps1.c \
 	re3_pc.c re3_ps1_game.c \
 	render_bitmap.c render_bitmap_opengl.c \
-	render.c render_opengl.c \
+	render.c render_opengl.c render_text.c \
 	render_mesh.c render_mesh_opengl.c \
 	render_skel.c render_skel_opengl.c render_skel_list.c \
 	render_texture.c render_texture_opengl.c \
@@ -35,7 +35,7 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	re1_pc_game.h re1_ps1.h \
 	re2_pc_demo.h re2_pc_game.h re2_ps1.h \
 	re3_pc.h re3_ps1_game.h \
-	render.h render_bitmap.h \
+	render.h render_bitmap.h render_text.h \
 	render_mesh.h render_mesh_opengl.h \
 	render_skel.h render_skel_opengl.h render_skel_list.h \
 	render_texture.h render_texture_opengl.h \
