--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,7 +41,7 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	render_skel.h render_skel_opengl.h render_skel_list.h \
 	render_texture.h render_texture_opengl.h \
 	render_texture_list.h \
-	render_mask.h \
+	render_mask.h render_mask_opengl.h \
 	room.h room_rdt.h room_rdt_script.h \
 	room_rdt2.h room_rdt2_script.h room_rdt3_script.h \
 	state.h video.h \
