--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,7 +22,7 @@ reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	render_texture.c render_texture_opengl.c \
 	render_texture_list.c \
 	render_mask.c render_mask_opengl.c \
-	room.c room_rdt.c room_rdt_script.c \
+	room.c room_rdt.c room_rdt_script.c room_rdt_script_dump.c \
 	room_rdt2.c room_rdt2_script.c room_rdt2_script_dump.c \
 	room_rdt3_script.c room_rdt3_script_dump.c \
 	state.c video.c video_opengl.c \
@@ -43,7 +43,7 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	render_texture.h render_texture_opengl.h \
 	render_texture_list.h \
 	render_mask.h render_mask_opengl.h \
-	room.h room_rdt.h room_rdt_script.h room_rdt_script_common.h \
+	room.h room_rdt.h room_rdt_script.h room_rdt_script_common.h room_rdt_script_dump.h \
 	room_rdt2.h room_rdt2_script.h room_rdt2_script_common.h room_rdt2_script_dump.h \
 	room_rdt3_script.h room_rdt3_script_common.h room_rdt3_script_dump.h \
 	state.h video.h \
