Enable silent rules

--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,7 @@ AC_CONFIG_HEADER([config.h])
 AC_CONFIG_AUX_DIR([autotools])
 AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)
+m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
 # Checks for programs.
 AC_PROG_CC
