--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,17 @@ AC_CHECK_HEADERS([fcntl.h])
 AC_HEADER_STDC
 AC_CHECK_FUNCS([memset pow])
 
+case "$host" in
+	m68k*)
+		AC_CHECK_DEFINE([__m68k__], [],
+			[CFLAGS="$CFLAGS -D__m68k__"
+			CCASFLAGS="$CCASFLAGS -D__m68k__"]
+		)
+		;;
+	*)
+		;;
+esac	
+
 # Checks for target
 
 SYS_SDLIMAGE_ADDLIBS=""
