--- a/configure.ac
+++ b/configure.ac
@@ -13,15 +13,16 @@ m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
+AM_PROG_AS
 
 # Checks for header files.
+AC_HEADER_STDC
 AC_CHECK_HEADERS([fcntl.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
 # Checks for library functions.
 #AC_FUNC_MALLOC
-AC_HEADER_STDC
 AC_CHECK_FUNCS([memset pow])
 
 case "$host" in
